--- a/pom.xml
+++ b/pom.xml
@@ -55,11 +55,7 @@
 <!--            <groupId>org.apache.logging.log4j</groupId>-->
 <!--            <artifactId>log4j-core</artifactId>-->
 <!--        </dependency>-->
-        <dependency>
-            <groupId>org.mybatis</groupId>
-            <artifactId>mybatis</artifactId>
-            <version>3.3.0</version>
-        </dependency>
+        <!-- MyUtils - JDBCDemo 使用 JDBC，连接 阿里云 5.7.42 -->
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
